S7-Spring MockCMvc Test with Mockito and JUnit
Lessons 76-82