@@ -3,35 +3,62 @@ package guru.springframework.myspring7restmvc.controllers;
 import guru.springframework.myspring7restmvc.model.Customer;
 import guru.springframework.myspring7restmvc.services.CustomerService;
 import guru.springframework.myspring7restmvc.services.CustomerServiceImpl;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
+import tools.jackson.databind.ObjectMapper;
 
+import java.util.HashMap;
+import java.util.Map;
+import java.util.UUID;
+
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.core.Is.is;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.mockito.Mockito.verify;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(CustomerController.class)
+@ExtendWith(MockitoExtension.class)
 class CustomerControllerTest {
 
     @Autowired
     MockMvc mockMvc;
 
+    @Autowired
+    ObjectMapper objectMapper;
+
     // Required dependency for CustomerController
     @MockitoBean
     CustomerService customerService;
 
-    CustomerServiceImpl customerServiceImpl = new CustomerServiceImpl();
+    CustomerServiceImpl customerServiceImpl;
+
+    @Captor
+    ArgumentCaptor<UUID> uuidCaptor;
+    @Captor
+    ArgumentCaptor<Customer> customerCaptor;
+
+    @BeforeEach
+    void setUp() {
+        customerServiceImpl = new CustomerServiceImpl();
+    }
 
     @Test
     void test_get_all_customers() throws Exception {
         given(customerService.findAll()).willReturn(customerServiceImpl.findAll());
 
-        mockMvc.perform(get("/api/v1/customer")
+        mockMvc.perform(get(CustomerController.CUSTOMER_PATH)
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
@@ -40,15 +67,79 @@ class CustomerControllerTest {
 
     @Test
     void test_get_customer_by_id() throws Exception {
-        Customer testCustomer = customerServiceImpl.findAll().get(0);
+        Customer testCustomer = customerServiceImpl.findAll().getFirst();
 
         given(customerService.findById(testCustomer.getId())).willReturn(testCustomer);
 
-        mockMvc.perform(get("/api/v1/customer/" + testCustomer.getId())
+        mockMvc.perform(get(CustomerController.CUSTOMER_PATH + "/" + testCustomer.getId())
                         .accept(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id", is(testCustomer.getId().toString())))
                 .andExpect(jsonPath("$.customerName", is(testCustomer.getCustomerName())));
+    }
+
+    @Test
+    void test_create_new_customer() throws Exception {
+        Customer testCustomer = customerServiceImpl.findAll().getFirst();
+        testCustomer.setId(null);
+        testCustomer.setVersion(null);
+
+        given(customerService.saveCustomer(any(Customer.class))).willReturn(customerServiceImpl.findAll().get(1));
+
+        mockMvc.perform(post(CustomerController.CUSTOMER_PATH)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .accept(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(testCustomer)))
+                .andExpect(status().isCreated())
+                .andExpect(header().exists("Location"));
+    }
+
+    @Test
+    void test_update_customer_by_id() throws Exception {
+        Customer testCustomer = customerServiceImpl.findAll().getFirst();
+
+        mockMvc.perform(put(CustomerController.CUSTOMER_PATH + "/" + testCustomer.getId())
+                    .accept(MediaType.APPLICATION_JSON)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(testCustomer)))
+                .andExpect(status().isNoContent());
+
+        verify(customerService).updateCustomerById(uuidCaptor.capture(), any(Customer.class));
+
+        assertThat(testCustomer.getId()).isEqualTo(uuidCaptor.getValue());
+    }
+
+    @Test
+    void test_delete_customer_by_id() throws Exception {
+        Customer testCustomer = customerServiceImpl.findAll().getFirst();
+
+        mockMvc.perform(delete(CustomerController.CUSTOMER_PATH + "/" + testCustomer.getId())
+                .accept(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNoContent());
+
+        verify(customerService).deleteById(uuidCaptor.capture());
+
+        assertThat(testCustomer.getId()).isEqualTo(uuidCaptor.getValue());
+    }
+
+    @Test
+    void test_patch_customer() throws Exception {
+        Customer testCustomer = customerServiceImpl.findAll().getFirst();
+
+        Map<String, Object> customerMap = new HashMap<>();
+        customerMap.put("customerName", "Test-customer-name");
+
+        mockMvc.perform(patch(CustomerController.CUSTOMER_PATH + "/" + testCustomer.getId())
+                        .accept(MediaType.APPLICATION_JSON)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(customerMap)))
+                .andExpect(status().isNoContent());
+
+        verify(customerService).patchById(uuidCaptor.capture(), customerCaptor.capture());
+
+        assertThat(testCustomer.getId()).isEqualTo(uuidCaptor.getValue());
+        assertThat(customerMap.get("customerName")).isEqualTo(customerCaptor.getValue().getCustomerName());
+
     }
 }
